Updated TODO file

--- a/changes
+++ b/changes
@@ -1,21 +1,1 @@
-Created Entity Domains:
-
- - Added a lot more stuff to parse.c
- - Technically not an AI, just a user-specified Domain where the Entity can remain in - If the Entity goes passed the domain, it's confined and "snapped" back to the inside of the Domain. Then, the Entity will turn around.
- - X-Domain works, but Y-Domain doesn't yet (How do you turn around gravity?)
- - Added Entity Speed member
- - Added Entity Direction member
-
-
-Added Barrier Types (2):
- - The Wall Barrier, Denoted as "W" in the barr file.
-    - The default Barrier, same as before
- - The Void Barrier, Denoted as "V" in the barr file.
-    - Barrier that destroys all it touches (except other barriers)
-       - Changes Player.Alive to false.
-       - Changes Entity.Alive to false.
-    - Colored gray for now
- - Barrier Types are added as members of the obj_Barrier struct (int Type)
- - To detect / differentiate between these two types of barriers, I changed the collision code in the update functions.
- - Player update() still detects if the Player has fallen down and kills the Player accordingly.
-    - Entities only detect void barrier collision, and don't kill themselves when they fall.
+Updated TODO file
