Weather Update (literally):     - Added basic weather         Members (specified in weather.h under structure weather_Weather)             - Direction (the angle at which the wind blows in degrees)             - Strength (the strength of the wind)             - Time (the duration for the weather to take place in number of update frames)             - next (pointer to the next weather instance to take place after the current weather's time has run out)         - Not rendered, so there's no way of actually knowing where the wind is going.         - Only effects movement of bullets         - Most definitions located in weather.c and weather.h     - Added weather parsing         - Weather data is parsed from the wthr file in the map folder.     - Added random weather generation         - Only happens when there are no more weather instances in the list     - Added documentation to added functions (that I know of)     - Updated TODO
Other changes:
    - Added much more in-depth documentation of parse functions
        - Added line formats for each file parsing function
        - Added a long tutorial at the beginning of parse.c that explains how to read these confusing looking format specifiers.

--- a/changes
+++ b/changes
@@ -1,11 +1,21 @@
-Bullet Update:
-    - Added Player Direction member to assist in bullet creation
-    - Changed Bullet speed from 10 to 12.
-    - Added Player delay between bullet shots
-        - The player can only shoot new bullets every once in x amount of frames (currently 15)
-    - Added linked list removal of bullets
-    - Added Entity Collision and updates
-        - Now bullets kill entities when they collide and kills itself as well.
-    - Added Barrier Collision and updates
-        - Bullets deactivate themselves when they touch any barrier.
+Weather Update (literally):
+    - Added basic weather
+        Members (specified in weather.h under structure weather_Weather)
+            - Direction (the angle at which the wind blows in degrees)
+            - Strength (the strength of the wind)
+            - Time (the duration for the weather to take place in number of update frames)
+            - next (pointer to the next weather instance to take place after the current weather's time has run out)
+        - Not rendered, so there's no way of actually knowing where the wind is going.
+        - Only effects movement of bullets
+        - Most definitions located in weather.c and weather.h
+    - Added weather parsing
+        - Weather data is parsed from the wthr file in the map folder.
+    - Added random weather generation
+        - Only happens when there are no more weather instances in the list
+    - Added documentation to added functions (that I know of)
     - Updated TODO
+
+Other changes:
+    - Added much more in-depth documentation of parse functions
+        - Added line formats for each file parsing function
+        - Added a long tutorial at the beginning of parse.c that explains how to read these confusing looking format specifiers.
