Added basic files for level editor:     - No code yet, just "Hello World" program     - In order to run level editor, use "make run_editor" instead of "make run"     - Updated tasks.json for vscode and makefile for running level editor

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+Create Level Editor
 More Comments + Write Purpose of each file (ALWAYS ACTIVE)
 Maybe reformat constant variables to use enumeration.
 Player Lives / Respawn Mechanic ***
