Level Editor Update:   - Added barrier scaling   - Added creating new barriers using "CTRL + N" chords   - Added saving using "CTRL + S" in Level Editor     - Creates a new folder called "NEW" in the maps folder, which contains the saved data.   - Note: Have not added weather data editing or saving.
Next Update:
  - Add documentation to changes.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
-Create Level Editor
+Add Screen scrolling to level editor
+Add more Entity editing options to level editor
+Add menu to select levels
 More Comments + Write Purpose of each file (ALWAYS ACTIVE)
 Maybe reformat constant variables to use enumeration.
 Player Lives / Respawn Mechanic ***
